# Starship

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist  README.md  Resource.rc  Starship.desktop  config.yml  default.sav  imgui.ini  properties.h.in  starship.cfg.json
.github/workflows/: linux.yml  mac.yml  main.yml  switch.yml  windows.yml
assets/yaml/cn/rev0/: ast_audio.yaml
assets/yaml/eu/rev0/: ast_audio.yaml
assets/yaml/jp/rev0/: ast_A_ti.yaml  ast_audio.yaml  ast_fortuna.yaml  ast_map.yaml  ast_venom_1.yaml  ast_venom_2.yaml
assets/yaml/us/: ast_allies.yaml  ast_aquas.yaml  ast_versus.yaml
assets/yaml/us/rev0/: ast_audio.yaml  ast_venom_1.yaml
assets/yaml/us/rev1/: ast_7_ti_1.yaml  ast_A_ti.yaml  ast_audio.yaml  ast_map.yaml
cmake/: configure-packaging.cmake  packaging.cmake  toolchain-x86_64-w64-mingw32.cmake
cmake/modules/: FindOgg.cmake  FindVorbis.cmake  FindlibUsb.cmake  Findudev.cmake
docs/: BUILDING.md
include/: audiothread_cmd.h  bgm.h  debug.h  fox_map.h  fox_option.h  fox_record.h  functions.h  gfx.h  gfx_dimensions.h  global.h  hit64.h  hud.h  i1.h  i2.h  i3.h  i4.h  i5.h  i6.h  macros.h  mods.h  sf64_tagging.h  sf64audio_external.h  sf64audio_provisional.h  sf64context.h  sf64dma.h  sf64math.h  sf64mesg.h  sf64object.h  sf64save.h  sf64thread.h  sfx.h  structs.h  sys.h  variables.h
include/PR/: controller.h  xstdio.h
include/assets/: ast_7_ti_1.h  ast_7_ti_2.h  ast_8_ti.h  ast_9_ti.h  ast_A_ti.h  ast_allies.h  ast_andross.h  ast_aquas.h  ast_area_6.h  ast_arwing.h  ast_audio.h  ast_bg_planet.h  ast_bg_space.h  ast_blue_marine.h  ast_bolse.h  ast_common.h  ast_corneria.h  ast_ending.h  ast_ending_award_back.h  ast_ending_award_front.h  ast_ending_expert.h  ast_enmy_planet.h  ast_enmy_space.h  ast_font_3d.h  ast_fortuna.h  ast_great_fox.h  ast_katina.h  ast_landmaster.h  ast_logo.h  ast_macbeth.h  ast_map.h  ast_meteo.h  ast_option.h  ast_radio.h  ast_sector_x.h  ast_sector_y.h  ast_sector_z.h  ast_solar.h  ast_star_wolf.h  ast_text.h  (+11 more)
include/libc/: math.h  stdbool.h  stddef.h  stdint.h  string.h
linker_scripts/us/rev1/: symbol_addrs_audio.txt
port/assets/textures/hud/: sBoostGaugeArrow0  sBoostGaugeArrow1  sBoostGaugeArrow2  sBoostGaugeArrow3  sBoostGaugeArrow4  sBoostGaugeArrow5  sBoostGaugeArrow6  sBoostGaugeArrow7  sBoostGaugeArrow8
port/shaders/metal/: default.shader.metal
src/: buffers.c  dmatable.c  libc_math64.c  libc_sprintf.c
src/audio/: audio_context.c  audio_effects.c  audio_general.c  audio_heap.c  audio_load.c  audio_playback.c  audio_seqplayer.c  audio_synthesis.c  audio_tables.c  audio_thread.c  mixer.c  mixer.h  note_data.c
src/engine/: fox_360.c  fox_97F80.c  fox_A4290.c  fox_beam.c  fox_bg.c  fox_col1.c  fox_col2.c  fox_colheaders.c  fox_context.c  fox_demo.c  fox_display.c  fox_edata_info.c  fox_edisplay.c  fox_effect.c  fox_enmy.c  fox_enmy2.c  fox_fade.c  fox_game.c  fox_hud.c  fox_load.c  fox_load_inits.c  fox_message.c  fox_play.c  fox_radio.c  fox_rcp_setup.c  fox_reset.c  fox_save.c  fox_std_lib.c  fox_tank.c  fox_versus.c  fox_wheels.c  guPerspectiveF.c  lookat.c  water_effect.inc
src/libultra/gu/: cosf.c  lookat.c  mtxutil.c  ortho.c  perspective.c  sinf.c  sqrtf.c
src/libultra/io/: ai.c  aisetfreq.c
src/libultra/libc/: ldiv.c  string.c  xldtob.c  xlitob.c  xprintf.c
src/mods/: fpscounter.c  hit64.c  levelselect.c  object_ram.c  sfxjukebox.c  sfxjukebox2.c  spawner.c
src/overlays/ovl_ending/: fox_end1.c  fox_end2.c  fox_end2_data.c
src/overlays/ovl_i1/: fox_co.c  fox_tr.c  fox_tr360.c  fox_ve1.c
src/overlays/ovl_i2/: fox_me.c  fox_sx.c
src/overlays/ovl_i3/: fox_a6.c  fox_aq.c  fox_so.c  fox_zo.c
src/overlays/ovl_i4/: fox_bo.c  fox_fo.c  fox_ka.c  fox_sz.c
src/overlays/ovl_i5/: fox_ground.c  fox_ma.c  fox_ti.c
src/overlays/ovl_i6/: fox_andross.c  fox_sy.c  fox_turret.c  fox_ve2.c
src/overlays/ovl_menu/: fox_i_menu.c  fox_map.c  fox_option.c  fox_title.c  fox_title.h
src/port/: Engine.cpp  Engine.h  GBIMiddleware.cpp  Game.cpp  Variables.cpp
src/port/audio/: GameAudio.h
src/port/extractor/: GameExtractor.cpp  GameExtractor.h
src/port/hooks/: Events.h
src/port/hooks/impl/: EventSystem.cpp  EventSystem.h
src/port/hooks/list/: ActionEvent.h  ActorEvent.h  EngineEvent.h  ItemEvent.h  PlayerShotEvent.h
src/port/interpolation/: FrameInterpolation.cpp  FrameInterpolation.h
src/port/mods/: PortEnhancements.c  PortEnhancements.h
src/port/notification/: notification.cpp  notification.h
src/port/patches/: DisplayListPatch.cpp  DisplayListPatch.h
src/port/resource/importers/: AnimFactory.cpp  AnimFactory.h  ColPolyFactory.cpp  ColPolyFactory.h  EnvSettingsFactory.cpp  EnvSettingsFactory.h  GenericArrayFactory.cpp  GenericArrayFactory.h  HitboxFactory.cpp  HitboxFactory.h  LimbFactory.cpp  LimbFactory.h  MessageFactory.cpp  MessageFactory.h  MessageLookupFactory.cpp  MessageLookupFactory.h  ObjectInitFactory.cpp  ObjectInitFactory.h  ResourceUtil.h  ScriptCommandFactory.cpp  ScriptCommandFactory.h  ScriptFactory.cpp  ScriptFactory.h  SkeletonFactory.cpp  SkeletonFactory.h  Vec3fFactory.cpp  Vec3fFactory.h  Vec3sFactory.cpp  Vec3sFactory.h
src/port/resource/importers/audio/: AudioTableFactory.cpp  AudioTableFactory.h  BookFactory.cpp  BookFactory.h  DrumFactory.cpp  DrumFactory.h  EnvelopeFactory.cpp  EnvelopeFactory.h  InstrumentFactory.cpp  InstrumentFactory.h  LoopFactory.cpp  (+7 more)
src/port/resource/loaders/: AudioLoader.cpp  AudioLoader.h  test.c
src/port/resource/type/: Animation.cpp  Animation.h  ColPoly.cpp  ColPoly.h  EnvSettings.cpp  EnvSettings.h  GenericArray.cpp  GenericArray.h  Hitbox.cpp  Hitbox.h  Limb.cpp  Limb.h  Message.cpp  Message.h  ObjectInit.cpp  ObjectInit.h  ResourceType.h  Script.cpp  Script.h  Skeleton.cpp  Skeleton.h  Vec3fArray.cpp  Vec3fArray.h  Vec3sArray.cpp  Vec3sArray.h
src/port/ui/: ImguiUI.cpp  ImguiUI.h  ResolutionEditor.cpp  ResolutionEditor.h  UIWidgets.cpp  UIWidgets.h
src/sys/: sys_fault.c  sys_joybus.c  sys_lib.c  sys_main.c  sys_math.c  sys_matrix.c  sys_memory.c  sys_save.c  sys_timer.c
yamls/us/rev1/: overlays.yaml
(+17 files in other folders)
